--- a/package.json
+++ b/package.json
@@ -5,8 +5,14 @@
   "repository": "git@github.com:fredericbarthelet/serverless-typescript.git",
   "author": "Frédéric Barthelet <fredericb@theodo.fr>",
   "license": "MIT",
+  "scripts": {
+    "test:coverage": "jest --coverage"
+  },
   "dependencies": {
     "lodash": "^4.17.15",
     "typescript-json-schema": "^0.42.0"
+  },
+  "devDependencies": {
+    "jest": "^25.1.0"
   }
 }
