--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "scripts": {
     "watch": "tsc --watch",
     "build": "tsc",
+    "lint": "eslint . --ext .js,.ts",
+    "lint:fix": "eslint . --ext .js,.ts --fix",
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
@@ -19,7 +21,13 @@
     "@types/lodash": "^4.14.149",
     "@types/node": "^13.9.1",
     "@types/serverless": "^1.18.6",
+    "@typescript-eslint/eslint-plugin": "^2.23.0",
+    "@typescript-eslint/parser": "^2.23.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "jest": "^25.1.0",
+    "prettier": "^1.19.1",
     "typescript": "^3.8.3"
   }
 }
