--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,8 @@
     "sourceMap": false,
     "target": "es5"
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": [
+    "src/**/*.test.ts"
+  ]
 }
