--- a/.npmignore
+++ b/.npmignore
@@ -1,8 +1,11 @@
 .circleci
-.gitignore
 .eslintignore
 .eslintrc.js
+.gitignore
+.prettierrc.json
+.vscode
 coverage
+jest.config.js
 node_modules
 src
 tsconfig.json
