--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@types/aws-lambda": "^8.10.47",
     "lodash": "^4.17.15",
     "typescript-json-schema": "^0.42.0"
   },
